--- a/example/package.json
+++ b/example/package.json
@@ -23,8 +23,11 @@
     "@web3-react/walletconnect-connector": "latest",
     "@web3-react/walletlink-connector": "latest",
     "next": "^12.0.8",
+    "oreid-js": "^4.4.2",
+    "oreid-webpopup": "^2.1.2",
     "react": ">=16.8",
     "react-dom": ">=16.8",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "web3": "^1.8.0"
   }
 }
