--- a/example/package.json
+++ b/example/package.json
@@ -24,6 +24,7 @@
     "@web3-react/walletlink-connector": "latest",
     "next": "^12.0.8",
     "oreid-js": "^4.4.2",
+    "oreid-react": "^1.4.1",
     "oreid-webpopup": "^2.1.2",
     "react": ">=16.8",
     "react-dom": ">=16.8",
