--- a/example/package.json
+++ b/example/package.json
@@ -29,6 +29,7 @@
     "react": ">=16.8",
     "react-dom": ">=16.8",
     "typescript": "^3.7.5",
-    "web3": "^1.8.0"
+    "web3": "^1.8.0",
+    "web3-providers-http": "^1.8.1"
   }
 }
